# agent-platform

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.gepa.yml  docker-compose.yml  pyproject.toml  railway.toml
.github/workflows/: ci-cd.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
deploy/: gepa-automation.service  setup-gepa-automation.sh
examples/: api_client.py  gepa_optimization.py  run_browser_task.py
src/: __init__.py
src/agents/: __init__.py
src/agents/browser/: __init__.py  agent.py  page_parser.py  session_manager.py  tools.py
src/core/: __init__.py  base_agent.py  config.py  llm_client.py  schemas.py  secrets.py
src/core/gepa/: __init__.py  auto_loop.py  automation.py  dashboard.py  middleware.py  notifications.py  optimizer.py  watchdog.py
src/db/: __init__.py  models.py  session.py
src/gateway/: __init__.py  main.py
src/gateway/routes/: agents.py  health.py  tasks.py
src/gateway/services/: __init__.py  task_executor.py
src/worker/: __init__.py  main.py
tests/: __init__.py  test_browser_agent.py  test_gepa_integration.py
